2008-05-31  Allin Cottrell <cottrell@wfu.edu>

	* term/metapost.trm (MP_filled_polygon):  Limit the number of vertices
	per line of output.

2008-05-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (make_tics):  Don't generate tics for an empty axis range.

2008-05-27  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wtext.c (TextInit), src/win/wgraph.c (GraphInit):
	Increase buffer sizes which contain the path to wgnuplot.ini.  Fixes
	crashes on systems with very long paths of the %APPDATA% directory.

2008-05-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_key_sample): Do not draw errorbars on candlestick
	key sample.

2008-05-25  Hans-Bernhard Broeker <broeker@physik.rwth-aachen.de>

	* term/emf.trm (EMF_options): Option 'size' broke out of parsing
	loop prematurely.

2008-05-22  Thomas Sefzick  <thse@users.sourceforge.net>

	* src/bitmap.c (b_vector): If either end of a vector would fall outside
	the canvas area, don't draw it.  This prevents segfaults and memory
	access problems if the terminal coordinates overflow or go negative.
	Bug #1969415

2008-05-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/specfun.c (inverse_error_func):  The piecewise numerical
	approximation failed to handle the case where x was exactly the join
	point for the pieces.  Include +/- 0.7 in the central piece.
	Also add one more cycle of Newton-Raphson.
	Bug #1962800

2008-05-20  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm (EMF_dashtype):  Don't ignore linetype LT_AXIS.

2008-05-08  Thomas Sefzick  <thse@users.sourceforge.net>

	* src/axis.c (setup_tics):  If the user specified an explicit
	tic interval on a timefmt axis, do not change this by calling
	quantize_time_tics().
	Bug #1908019

2008-05-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm (ENHPDF_FLUSH ENHPDF_put_text):  We correctly issue 
	save/restore requests to PDFlib, but we need to mirror these in the