@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: show.c,v 1.185.2.4 2008/03/12 03:09:17 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: show.c,v 1.185.2.5 2008/06/01 06:13:45 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - show.c */
@@ -347,6 +347,10 @@ show_command()
 	break;
     case S_COLORBOX:
 	show_colorbox();
+	break;
+    case S_COLORNAMES:
+	c_token--;
+	show_palette_colornames();
 	break;
     case S_POINTSIZE:
 	show_pointsize();
